# zetahack-backend

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.py
app/: main.py
app/core/: config.py  crud.py  index.py  logging.py  mongodb.py
app/middleware/: middleware.py
app/schemas/: bills.py  general.py
app/utilitities/: populate_consumer_details.py  populate_entries.py  populate_seller_details.py
reactjs/: package-lock.json  package.json  start.sh
serverconf/: gunicorn_conf.py
